--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PETamentor</title>
+    <title>PET-800</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>PETamentor</h1>
+        <h1>PET-800</h1>
     </header>
 
     <nav>
@@ -19,7 +19,7 @@
     </nav>
 
     <footer>
-        <p>&copy; 2024 PETamentor. Inspirat de Ondřej Šraitr.</p>
+        <p>&copy; 2024 PET-800. Inspirat de Ondřej Šraitr.</p>
     </footer>
 </body>
 </html>
